added bootstrap and removed custom javascript carousel

--- a/contoso_news/css/style.css
+++ b/contoso_news/css/style.css
@@ -62,17 +62,11 @@ main {
 }
 
 body {
-    font-family: 'News Cycle';
+    font-family: 'News Cycle' !important;
 }
 
 header {
     font-family: 'Contrail One'
-}
-
-article {
-    margin: 5px 0px;
-    padding: 5px 5px;
-    box-shadow: -1px -1px 6px #888888;
 }
 
 @media print {
