--- a/contoso_news/css/style.css
+++ b/contoso_news/css/style.css
@@ -87,24 +87,10 @@ header {
     }
 }
 
-section#carousel > figure > img {
-    display: none;
-    margin: 0px auto;
-}
-
-section#carousel > figure.visible > img {
-    display: block;
-    position: relative;
-    overflow: hidden;
-}
-
-section#carousel > figure > figcaption {
-    display: none;
-}
-
-section#carousel > figure.visible > figcaption {
-    display: block;
+.carousel-inner {
     text-align: center;
-    font-weight: bold;
-    font-size: 1.5em;
+}
+
+.carousel .item > img {
+    display: inline-block;
 }
